--- a/web/finalize_entry.html
+++ b/web/finalize_entry.html
@@ -212,7 +212,7 @@
              const response = await eel.finalise_result(selected)();  
             // Send array to Python via Eel
             console.log(selected)
-            alert("Selected results sent to Python!");
+            alert("Data Added Succesfully");
         });
     </script>
 
